# jp-web-novel-text

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
.github/workflows/: test.yml
benches/: benchmark.rs
examples/: kokoro.rs
src/: dictionary.rs  lib.rs  phrase.rs
src/parser/: general_parser.rs  mod.rs  parse_dictionary.rs  parser.rs
src/parser/context_parser/: general_context_parser.rs  mod.rs
src/parser/nom_parsers/: mod.rs  new_line.rs  ruby.rs  white_space.rs
src/parser/nom_parsers/char/: mod.rs  new_line.rs
src/parser/test_data/parse_without_dic_works/: case1.txt
